# TrafficSimulator

./: CMakeLists.txt  README.md  main.cpp
core/: Board.cpp  Board.hpp  gamemanager.cpp  gamemanager.hpp  vehiclehandler.cpp  vehiclehandler.hpp
core/MO/: ITile.cpp  ITile.hpp  IVehicle.cpp  IVehicle.hpp  car.cpp  car.hpp  crossroads.cpp  crossroads.hpp  emptyfield.cpp  emptyfield.hpp  road.cpp  road.hpp  spawningtile.cpp  spawningtile.hpp
core/algorithm/: pathfinder.cpp  pathfinder.hpp
maps/: boardbuilder.cpp  boardbuilder.hpp
